--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="h-full bg-gray-50">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/Spotify_icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spotify 2.0</title>
+    <title>Spotify 2.0 - Web Player</title>
   </head>
   <body class="h-full overflow-hidden">
     <div id="root"></div>
